; ModuleID = '/home/carl/AnghaBench/openwrt/target/linux/at91/image/dfboot/src/extr_dataflash.c_erase_dataflash.c'
source_filename = "/home/carl/AnghaBench/openwrt/target/linux/at91/image/dfboot/src/extr_dataflash.c_erase_dataflash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DataFlashInst = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @erase_dataflash(i64 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i64 %0, i64* %3, align 8
  %6 = load i64, i64* %3, align 8
  %7 = trunc i64 %6 to i32
  store i32 %7, i32* %4, align 4
  store i32* @DataFlashInst, i32** %5, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = call i32* @AT91F_DataflashSelect(i32* %8, i32* %4)
  store i32* %9, i32** %5, align 8
  %10 = load i32, i32* %4, align 4
  %11 = icmp eq i32 %10, -1
  br i1 %11, label %12, label %13

12:                                               ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %16

13:                                               ; preds = %1
  %14 = load i32*, i32** %5, align 8
  %15 = call i32 @AT91F_DataFlashErase(i32* %14)
  store i32 %15, i32* %2, align 4
  br label %16

16:                                               ; preds = %13, %12
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}

declare dso_local i32* @AT91F_DataflashSelect(i32*, i32*) #1

declare dso_local i32 @AT91F_DataFlashErase(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
